--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,14 +9,15 @@
   <body>
     <div id="main">
       <div id="header-wrapper">
-        <div id="header" class="basic" >
-        </div>
-      </div>
+        <div id="header" class="basic" ></div>
+	  </div> <!-- header-wrapper -->
+	  <div id="toc-frame">
+		  <div class="logo">始める <span class="sbt">sbt</span></div>
+		  <li><a href="/sbt-getting-started-guide-ja/">ようこそ!</a></li>
+	  </div>
       <div id="wrapper">
         <div id="content" class="site">
-
           {{ content }}
-
         </div>
       </div>
     </div>
