--- a/sphinx/_sphinx/themes/sbt/static/docs.css
+++ b/sphinx/_sphinx/themes/sbt/static/docs.css
@@ -170,7 +170,7 @@ strong {color: #1d3c52; }
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
 }
 
-.pre { padding: 1px 2px; background-color: #f3f7e9; font-family: Menlo, Monaco, "Courier New", monospace; font-size: 12px; }
+.pre { background-color: #f3f7e9; font-family: Menlo, Monaco, "Courier New", monospace; font-size: 12px; white-space: pre; }
 .footer h5 { text-transform: none; }
 
 
