Include link to source on GitHub at bottom of the page.  Fixes #921.

--- a/sphinx/_sphinx/themes/sbt/static/docs.css
+++ b/sphinx/_sphinx/themes/sbt/static/docs.css
@@ -220,3 +220,7 @@ input#search-input {
 .breadcrumb li select option {
     font-weight: normal;
 }
+.page-source {
+    margin-top: 20px;
+    text-align: center;
+}
