generate flat pages

--- a/src/nanoc/content/stylesheet.css
+++ b/src/nanoc/content/stylesheet.css
@@ -1,6 +1,6 @@
 body {
   background: #fff;
-  font-family: 'Helvetica', Arial, sans-serif;
+  font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
   font-size: 22px;
   text-rendering: optimizelegibility;
 }
@@ -42,6 +42,7 @@ body.landing div.splash {
 body.default header {
   min-width: 960px;
   height: 50px;
+  margin-bottom: 0px;
 }
 
 header ul {
@@ -53,16 +54,19 @@ body.landing header ul {
   margin-top: 50px;  
 }
 
+header {
+  font-size: 18px;
+}
 header li {
   position: relative;
   float: left;
 }
 header li a {
   display: inline-block;
-  font-family: 'proxima-nova', sans-serif;
-  font-weight: 700;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-weight: 500;
   font-style: normal;
-  text-shadow: 1px 1px 0px #366A76;
+  /* text-shadow: 1px 1px 0px #366A76; */
   font-size: 1.0em;
   text-transform: uppercase;
   color: #ffffff;
@@ -78,11 +82,41 @@ body.default header {
 
 div.content {
   background: #ffffff;
+}
+body.landing div.content {
   min-height: 600px;
   height: 100%;
 }
+body.default div.content {
+  min-height: 800px;
+  height: 100%;
+}
+h1 {
+  font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+  font-size: 48px;
+  font-weight: bold;
+}
+h2 {
+  font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+  font-size: 36px;
+  font-weight: bold;
+}
 
+body.default div.top {
+  color: #ffffff;
+  background-color: #53cdec; /* light blue */
+  height: 100px;
+  width: 100%;
+}
 
+body.default div.top h1 {
+  font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+  font-size: 2.0em;
+  font-style: normal;
+  font-weight: 300;
+}
+
+/* footer */
 footer {
   background: #002B36;
   z-index: 10;
@@ -91,12 +125,7 @@ footer {
   min-height: 200px;
   height: 100%;
   overflow: hidden;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
   color: #ffffff;
   font-size: 12px;
-}
-h1 {
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 48px;
-  font-weight: bold;
 }
