--- a/src/nanoc/content/stylesheet.css
+++ b/src/nanoc/content/stylesheet.css
@@ -7,18 +7,13 @@ body {
 body.landing header {
   color: #ffffff;
 }
-div.logo {
-  line-height: 1.0em;
+div.large-logo {
+  margin-top: 25px;
   float: left;
-  font-family: Gill Sans, Helvetica, Arial, sanserif;
-  font-weight: bold;
-  font-style: italic;
 }
-body.landing header div.logo {
-  font-size: 180px;
-}
-body.default header div.logo {
-  font-size: 50px;
+div.logo {
+  margin-top: 15px;
+  float: left;
 }
 div.logo a, div.logo a:hover {
   color: #ffffff;
@@ -41,7 +36,7 @@ body.landing div.splash {
 }
 body.default header {
   min-width: 960px;
-  height: 50px;
+  height: 80px;
   margin-bottom: 0px;
 }
 
@@ -49,6 +44,7 @@ header ul {
   position: relative;
   float: right;
   list-style-type: none;
+  margin-top: 20px;
 }
 body.landing header ul {
   margin-top: 50px;  
@@ -88,6 +84,7 @@ body.landing div.content {
   height: 100%;
 }
 body.default div.content {
+  padding-top: 1em;
   min-height: 800px;
   height: 100%;
 }
@@ -102,16 +99,16 @@ h2 {
   font-weight: bold;
 }
 
-body.default div.top {
+div.midbluebar {
   color: #ffffff;
   background-color: #53cdec; /* light blue */
-  height: 100px;
+  height: 4.0em;
   width: 100%;
 }
 
-body.default div.top h1 {
+div.midbluebar h1 {
   font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
-  font-size: 2.0em;
+  font-size: 1.5em;
   font-style: normal;
   font-weight: 300;
 }
