--- a/src/nanoc/layouts/default.html
+++ b/src/nanoc/layouts/default.html
@@ -17,7 +17,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="logo">
-              <a href="<%= @items['/'].path %>index.html">sbt</a>
+              <a href="<%= @items['/'].path %>index.html"><img src="<%= @items['/sbt-logo-white-72x50/'].path %>" alt="sbt"></a>
             </div>
             <ul class="nav">
               <li><a href="<%= @items['/documentation/'].path %>">Documentation</a></li>
@@ -30,7 +30,7 @@
         </div>
       </div>
     </header>
-    <div class="top">
+    <div class="midbluebar">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
