--- a/src/nanoc/layouts/landing.html
+++ b/src/nanoc/layouts/landing.html
@@ -18,9 +18,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <div class="logo">
-              sbt
-            </div>
+            <div class="large-logo"><img src="<%= @items['/sbt-logo-white-288x200/'].path %>" alt="sbt"></div>
             <ul class="nav">
               <li><a href="<%= @items['/documentation/'].path %>">Documentation</a></li>
               <li><a href="<%= @items['/download/'].path %>">Download</a></li>
