--- a/src/reference/custom.css
+++ b/src/reference/custom.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Source Sans Pro', 'Helvetica Neue', 'Arial', sans-serif
+}
+
 pre {
   font-size: 75%;
 }
@@ -33,7 +37,7 @@ div.header li {
 }
 div.header li a {
   display: inline-block;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 500;
   font-style: normal;
   /* text-shadow: 1px 1px 0px #366A76; */
@@ -46,4 +50,27 @@ div.header li a {
 div.header .navlist>li>a:hover {
   background-color: inherit;
   color: #19aacf;
+}
+div.tocwrapper {
+  clear: both;
+}
+@media screen and (min-device-width: 800px), projection {
+  div.container {
+    width: 70%;
+  }
+  div.span-16 {
+    width: 80%;
+  }
+  div.span-16 div.span-16 {
+    width: 100%;
+  }
+  div.prepend-1 {
+    padding-left: 5%;
+  }
+  div.append-1 {
+    padding-right: 5%;
+  }
+  p {
+    width: 45em;
+  }
 }
