--- a/src/tutorial/custom.css
+++ b/src/tutorial/custom.css
@@ -1,10 +1,9 @@
 body {
-  font-family: 'Helvetica Neue', 'Arial', sans-serif
+  font-family: Georgia, 'Times New Roman', serif;
 }
-h1, h2 {
+h1, h2, h3, h4 {
   font-family: 'Source Sans Pro', 'Helvetica Neue', 'Arial', sans-serif
 }
-
 
 pre {
   font-size: 75%;
