--- a/0.13/docs/css/custom.css
+++ b/0.13/docs/css/custom.css
@@ -1,4 +1,7 @@
 body {
+  font-family: Georgia, 'Times New Roman', serif;
+}
+h1, h2, h3, h4 {
   font-family: 'Source Sans Pro', 'Helvetica Neue', 'Arial', sans-serif
 }
 
@@ -55,8 +58,28 @@ div.tocwrapper {
   clear: both;
 }
 @media screen and (min-device-width: 800px), projection {
+  h1, h2 {
+    margin-left: -50%;
+    padding-left: 50%;
+    width: 150%;
+    background-color: #53cdec; /* light blue */
+    color: #ffffff;
+    margin-top: 0px;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    overflow: hidden;
+  }
+  body.color_scheme-github h1, body.color_scheme-github h2 {
+    color: #ffffff;
+  }
+  body.color_scheme-redmond h1, body.color_scheme-redmond h2 {
+    color: #ffffff;
+  }
   div.container {
     width: 70%;
+  }
+  div.contents {
+    padding-top: 0px;
   }
   div.span-16 {
     width: 80%;
