--- a/src/tutorial/custom.css
+++ b/src/tutorial/custom.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Georgia, 'Times New Roman', serif;
+  font-family: 'Source Sans Pro', 'Helvetica Neue', 'Arial', sans-serif
 }
 h1, h2, h3, h4 {
   font-family: 'Source Sans Pro', 'Helvetica Neue', 'Arial', sans-serif
