RWD: resize the logo via jQuery

--- a/src/nanoc/content/stylesheet.css
+++ b/src/nanoc/content/stylesheet.css
@@ -7,7 +7,7 @@ body {
 body.landing header {
   color: #ffffff;
 }
-div.large-logo {
+body.landing div.logo {
   margin-top: 25px;
   float: left;
 }
@@ -47,7 +47,9 @@ header ul {
   margin-top: 20px;
 }
 body.landing header ul {
-  margin-top: 50px;  
+  margin-top: 50px;
+  float: left;
+  margin-left: 50px;
 }
 
 header {
