--- a/src/nanoc/content/stylesheet.css
+++ b/src/nanoc/content/stylesheet.css
@@ -1,127 +1,175 @@
 body {
-  background: #fff;
+  background: #103a51;
   font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
-  font-size: 22px;
-  text-rendering: optimizelegibility;
+  color: #103a51;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  font-smoothing: antialiased;
+  -webkit-font-size-adjust: none;
+  text-rendering: optimizeLegibility;
+}
+body header {
+  background: #103a51;
+  padding: 5px 0 0 0;
 }
 body.landing header {
-  color: #ffffff;
-}
-body.landing div.logo {
-  margin-top: 25px;
-  float: left;
-}
-div.logo {
-  margin-top: 15px;
-  float: left;
-}
-div.logo a, div.logo a:hover {
-  color: #ffffff;
-  text-decoration: none;
-}
-
-body.landing header {
-  min-width: 960px;
   height: 300px;
 }
-body.landing div.splash {
-  position: absolute;
-  top: 0;
-  z-index: -1;
-  background-image: url('ryoanji.jpg');
-  height: 300px;
+.wrench {
   width: 100%;
-  background-size: cover;
-  min-width: 960px;
+  height: 100%;
+  background: transparent url('wrench-1000-center-navy.png') no-repeat center 135px;
 }
-body.default header {
-  min-width: 960px;
-  height: 80px;
-  margin-bottom: 0px;
+header nav {
+  height: 75px;
+  background: #ffffff;
+  margin: 0;
+}
+header nav .logo {
+  height: 100%;
+  width: 100%;
+}
+header nav .logo img {
+  height: 40px;
+  margin-top: 16px;
 }
 
-header ul {
+header .nav {
   position: relative;
   float: right;
-  list-style-type: none;
-  margin-top: 20px;
-}
-body.landing header ul {
-  margin-top: 50px;
-  float: left;
-  margin-left: 50px;
+  border-right: 1px solid #ebebeb;
 }
 
-header {
-  font-size: 18px;
-}
-header li {
-  position: relative;
-  float: left;
-}
-header li a {
+header .nav a {
   display: inline-block;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-  font-weight: 500;
+  font-weight: 400;
   font-style: normal;
-  /* text-shadow: 1px 1px 0px #366A76; */
   font-size: 1.0em;
   text-transform: uppercase;
-  color: #ffffff;
+  display: block;
+  float: left;
+  height: 75px;
+  line-height: 80px;
+  padding: 0 30px;
+  color: #2E6D82;
+  border-left: 1px solid #ebebeb;
+  font-weight: bold;
+  letter-spacing: -.03em;
+  font-size: 14px;
+  transition: all 200ms ease-in-out;
 }
-header .nav>li>a:hover {
-  background-color: inherit;
-  color: #19aacf;
-}
-body.default header {
-  color: #ffffff;
-  background-color: #073642;
+header .nav>a:hover {
+  background: #f5f5f5;
+  text-decoration: none;
+  box-shadow: inset 0 4px 0 #2E6D82, inset 0 0 3px #ebebeb;
+  transition: all 200ms ease-in-out;
 }
 
-div.content {
+
+.page-title {
+  color: #ffffff;
+  background-color: #103a51; /* light blue */
+  width: 100%;
+  padding: 20px 0;
+}
+
+.page-title h1 {
+  font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+  font-size: 2em;
+  line-height: 2em;
+  margin: 0;
+  font-style: normal;
+  font-weight: 400;
+  color: #ffffff;
+}
+
+
+.text-center {
+  text-align: center;
+}
+
+.fw-wrapper {
+  width: 100%;
+  margin: 0;
+  padding: 0;
   background: #ffffff;
 }
-body.landing div.content {
+
+
+.content {
+  background: #ffffff;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.landing .content {
   min-height: 600px;
-  height: 100%;
 }
-body.default div.content {
-  padding-top: 1em;
-  min-height: 800px;
-  height: 100%;
+.default .content {
+  min-height: 600px;
 }
+
 h1 {
   font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
   font-size: 48px;
-  font-weight: bold;
+  font-style: normal;
+  font-weight: 700;
+  color: #2E6D82;
 }
 h2 {
   font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
   font-size: 36px;
-  font-weight: bold;
-}
-
-div.midbluebar {
-  color: #ffffff;
-  background-color: #53cdec; /* light blue */
-  height: 4.0em;
-  width: 100%;
-}
-
-div.midbluebar h1 {
-  font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
-  font-size: 1.5em;
   font-style: normal;
-  font-weight: 300;
+  font-weight: 700;
+  color: #2E6D82;
 }
+
+a, a:link, a:visited, a:hover, a:active {
+  color: #19aacf;
+}
+
+a.btn,
+.btn {
+  transition: all 200ms ease-in-out;
+  display: inline-block;
+  line-height: 1.4em;
+  padding: 0.7em 1.5em;
+  margin: 5px 0;
+  background-color: #F16665;
+  border-radius: 3px;
+  border-bottom: 2px solid #D64546;
+  color: white !important;
+  text-transform: uppercase;
+  font-size: 1em;
+  font-weight: 400;
+  text-align: center;
+}
+
+a.btn:link,
+.btn:link,
+a.btn:visited,
+.btn:visited,
+a.btn:hover,
+.btn:hover,
+a.btn:active,
+.btn:active {
+  color: white;
+  text-decoration: none;
+}
+
+a.btn:hover,
+.btn:hover {
+  background-color: #E25758;
+  transition: all 200ms ease-in-out;
+}
+
 
 /* footer */
 footer {
-  background: #002B36;
   z-index: 10;
   padding-top: 20px;
   width: 100%;
-  min-height: 200px;
+  min-height: 100px;
   height: 100%;
   overflow: hidden;
   font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
