--- a/src/reference/custom.css
+++ b/src/reference/custom.css
@@ -12,13 +12,21 @@ pre {
 div.header {
   font-size: 18px;
   color: #ffffff;
-  background-color: #073642;
-  height: 80px;
+  background-color: #ffffff;
+  height: 75px;
+  border-top: 5px solid #103a51;
+  -webkit-box-shadow: 0px 4px 2px 0px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0px 4px 2px 0px rgba(0,0,0,0.3);
+  box-shadow: 0px 4px 2px 0px rgba(0,0,0,0.3);
 }
 
 div.logo {
-  margin-top: 15px;
-  float: left;
+  display: inline-block;
+}
+
+div.logo img {
+  height: 40px;
+  margin-top: 16px;
 }
 
 div.header div.container {
@@ -27,33 +35,47 @@ div.header div.container {
   border: none;
 }
 
-div.header ul {
+
+div.header .nav {
   position: relative;
   float: right;
-  list-style-type: none;
-  margin-top: 20px;
+  border-right: 1px solid #ebebeb;
+  border-bottom: 0px solid transparent;
 }
 
-div.header li {
-  position: relative;
-  float: left;
-}
-div.header li a {
+div.header .nav a {
   display: inline-block;
-  font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
-  font-weight: 500;
+  font-weight: 400;
   font-style: normal;
-  /* text-shadow: 1px 1px 0px #366A76; */
   font-size: 1.0em;
   text-transform: uppercase;
-  color: #ffffff;
   text-decoration: none;
-  padding: 10px 15px;
+  display: block;
+  float: left;
+  height: 75px;
+  line-height: 80px;
+  padding: 0 30px;
+  color: #2E6D82;
+  border: none;
+  border-bottom: 0px solid transparent;
+  border-left: 1px solid #ebebeb;
+  font-weight: bold;
+  letter-spacing: -.03em;
+  font-size: 14px;
+  transition: all 200ms ease-in-out;
 }
-div.header .navlist>li>a:hover {
-  background-color: inherit;
-  color: #19aacf;
+div.header .nav>a:hover {
+  background: #f5f5f5;
+  text-decoration: none;
+  box-shadow: inset 0 4px 0 #2E6D82, inset 0 0 3px #ebebeb;
+  transition: all 200ms ease-in-out;
 }
+
+
+
+
+
+
 div.tocwrapper {
   clear: both;
 }
@@ -62,7 +84,7 @@ div.tocwrapper {
     margin-left: -50%;
     padding-left: 50%;
     width: 150%;
-    background-color: #53cdec; /* light blue */
+    background-color: #103a51; /* navy */
     color: #ffffff;
     margin-top: 0px;
     padding-top: 1em;
@@ -96,4 +118,113 @@ div.tocwrapper {
   p {
     width: 45em;
   }
+}
+
+div.footer {
+  position: relative;
+  height: auto;
+}
+
+.fw-wrapper {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background: #ffffff;
+}
+.fw-wrapper.teal-blue {
+  background: #2E6D82;
+}
+
+.fw-wrapper.navy-ltr {
+  background: #406174;
+}
+
+.svg-icon {
+  width: 30px;
+  height: 30px;
+}
+
+
+body .support-strip .row{
+  background: #406174;
+}
+
+.support-item {
+  display: inline-block;
+  margin: 40px 60px 40px 0;
+}
+.support-icon {
+  display: inline-block;
+  margin-right: 10px;
+
+}
+
+.support-icon .svg-icon {
+  width: 50px;
+  height: 50px;
+}
+.support-detail {
+  display: inline-block;
+  min-height: 50px;
+  vertical-align: top;
+  text-align: left;
+}
+.support-detail h2 {
+  color: #ffffff;
+  font-size: 18px;
+  text-transform: uppercase;
+  margin: 6px 0 0 0;
+  padding: 0;
+  width: auto;
+  background-color: transparent;
+}
+.support-detail a {
+  color: #c2d2dc;
+  margin-right: 6px;
+}
+/* footer */
+footer {
+  z-index: 10;
+  padding-top: 36px;
+  padding-bottom: 30px;
+  width: 100%;
+  overflow: hidden;
+  font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+  color: #ffffff;
+  background: #103a51;
+  font-size: 12px;
+}
+footer .row {
+  background: #103a51;
+}
+footer a {
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 400;
+  color: #ffffff;
+  margin-right: 10px;
+}
+
+footer a:link,footer a:visited,footer a:hover,footer a:active {
+  color: #ffffff;
+}
+footer .ts  {
+  vertical-align: middle;
+
+}
+footer .ts img {
+  height: 20px;
+  margin-left: 10px;
+
+}
+footer .sbt  {
+  vertical-align: middle;
+  text-transform: uppercase;
+}
+footer .sbt a {
+  font-size: 14px;
+  font-weight: 700;
+}
+footer .sbt img {
+  height: 20px;
 }
