--- a/src/tutorial/custom.css
+++ b/src/tutorial/custom.css
@@ -12,13 +12,21 @@ pre {
 div.header {
   font-size: 18px;
   color: #ffffff;
-  background-color: #073642;
-  height: 80px;
+  background-color: #ffffff;
+  height: 75px;
+  border-top: 5px solid #103a51;
+  -webkit-box-shadow: 0px 4px 2px 0px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0px 4px 2px 0px rgba(0,0,0,0.3);
+  box-shadow: 0px 4px 2px 0px rgba(0,0,0,0.3);
 }
 
 div.logo {
-  margin-top: 15px;
-  float: left;
+  display: inline-block;
+}
+
+div.logo img {
+  height: 40px;
+  margin-top: 16px;
 }
 
 div.header div.container {
@@ -27,32 +35,40 @@ div.header div.container {
   border: none;
 }
 
-div.header ul {
+
+div.header .nav {
   position: relative;
   float: right;
-  list-style-type: none;
-  margin-top: 20px;
+  border-right: 1px solid #ebebeb;
+  border-bottom: 0px solid transparent;
 }
 
-div.header li {
-  position: relative;
-  float: left;
-}
-div.header li a {
+div.header .nav a {
   display: inline-block;
-  font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
-  font-weight: 500;
+  font-weight: 400;
   font-style: normal;
-  /* text-shadow: 1px 1px 0px #366A76; */
   font-size: 1.0em;
   text-transform: uppercase;
-  color: #ffffff;
   text-decoration: none;
-  padding: 10px 15px;
+  display: block;
+  float: left;
+  height: 75px;
+  line-height: 80px;
+  padding: 0 30px;
+  color: #2E6D82;
+  border: none;
+  border-bottom: 0px solid transparent;
+  border-left: 1px solid #ebebeb;
+  font-weight: bold;
+  letter-spacing: -.03em;
+  font-size: 14px;
+  transition: all 200ms ease-in-out;
 }
-div.header .navlist>li>a:hover {
-  background-color: inherit;
-  color: #19aacf;
+div.header .nav>a:hover {
+  background: #f5f5f5;
+  text-decoration: none;
+  box-shadow: inset 0 4px 0 #2E6D82, inset 0 0 3px #ebebeb;
+  transition: all 200ms ease-in-out;
 }
 div.tocwrapper {
   clear: both;
@@ -62,7 +78,7 @@ div.tocwrapper {
     margin-left: -50%;
     padding-left: 50%;
     width: 150%;
-    background-color: #53cdec; /* light blue */
+    background-color: #103a51; /* navy */
     color: #ffffff;
     margin-top: 0px;
     padding-top: 1em;
