added styling to tutorials

--- a/src/nanoc/content/stylesheet.css
+++ b/src/nanoc/content/stylesheet.css
@@ -229,6 +229,10 @@ a.btn:hover,
   color: #c2d2dc;
   margin-right: 6px;
 }
+body .support-detail a:hover {
+  color: #ffffff;
+  text-decoration: underline;
+}
 /* footer */
 footer {
   z-index: 10;
