--- a/src/reference/custom.css
+++ b/src/reference/custom.css
@@ -4,7 +4,9 @@ body {
 h1, h2, h3, h4 {
   font-family: 'Source Sans Pro', 'Helvetica Neue', 'Arial', sans-serif
 }
-
+a, a:link, a:visited, a:hover, a:active {
+  color: #19aacf;
+}
 pre {
   font-size: 75%;
 }
@@ -177,10 +179,21 @@ body .support-strip .row{
   padding: 0;
   width: auto;
   background-color: transparent;
+  font-weight: 700;
+  line-height: 1.1em;
+
 }
 .support-detail a {
   color: #c2d2dc;
+  margin: 0;
+  padding: 0;
   margin-right: 6px;
+  font-size: 16px;
+  text-decoration: none;
+}
+body .support-detail a:hover {
+  color: #ffffff;
+  text-decoration: underline;
 }
 /* footer */
 footer {
@@ -194,6 +207,9 @@ footer {
   background: #103a51;
   font-size: 12px;
 }
+body footer > .container {
+  background: #103a51 !important;
+}
 footer .row {
   background: #103a51;
 }
@@ -203,13 +219,22 @@ footer a {
   font-weight: 400;
   color: #ffffff;
   margin-right: 10px;
+  text-decoration: none;
+}
+footer a:hover {
+  text-decoration: underline;
 }
 
 footer a:link,footer a:visited,footer a:hover,footer a:active {
   color: #ffffff;
 }
 footer .ts  {
-  vertical-align: middle;
+  vertical-align: top;
+  width: 33.33333333%;
+  float: left;
+  font-size: 12px;
+  height: 23px;
+  line-height: 19px;
 
 }
 footer .ts img {
@@ -220,10 +245,18 @@ footer .ts img {
 footer .sbt  {
   vertical-align: middle;
   text-transform: uppercase;
+  width: 66.66666667%;
+  float: left;
 }
 footer .sbt a {
   font-size: 14px;
   font-weight: 700;
+  vertical-align: middle;
+  height: 20px;
+  line-height: 20px;
+}
+footer .sbt a:hover {
+  color: #ffffff;
 }
 footer .sbt img {
   height: 20px;
