--- a/src/tutorial/custom.css
+++ b/src/tutorial/custom.css
@@ -4,7 +4,9 @@ body {
 h1, h2, h3, h4 {
   font-family: 'Source Sans Pro', 'Helvetica Neue', 'Arial', sans-serif
 }
-
+a, a:link, a:visited, a:hover, a:active {
+  color: #19aacf;
+}
 pre {
   font-size: 75%;
 }
@@ -70,6 +72,12 @@ div.header .nav>a:hover {
   box-shadow: inset 0 4px 0 #2E6D82, inset 0 0 3px #ebebeb;
   transition: all 200ms ease-in-out;
 }
+
+
+
+
+
+
 div.tocwrapper {
   clear: both;
 }
@@ -112,4 +120,144 @@ div.tocwrapper {
   p {
     width: 45em;
   }
+}
+
+div.footer {
+  position: relative;
+  height: auto;
+}
+
+.fw-wrapper {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background: #ffffff;
+}
+.fw-wrapper.teal-blue {
+  background: #2E6D82;
+}
+
+.fw-wrapper.navy-ltr {
+  background: #406174;
+}
+
+.svg-icon {
+  width: 30px;
+  height: 30px;
+}
+
+
+body .support-strip .row{
+  background: #406174;
+}
+
+.support-item {
+  display: inline-block;
+  margin: 40px 60px 40px 0;
+}
+.support-icon {
+  display: inline-block;
+  margin-right: 10px;
+
+}
+
+.support-icon .svg-icon {
+  width: 50px;
+  height: 50px;
+}
+.support-detail {
+  display: inline-block;
+  min-height: 50px;
+  vertical-align: top;
+  text-align: left;
+}
+.support-detail h2 {
+  color: #ffffff;
+  font-size: 18px;
+  text-transform: uppercase;
+  margin: 6px 0 0 0;
+  padding: 0;
+  width: auto;
+  background-color: transparent;
+  font-weight: 700;
+  line-height: 1.1em;
+
+}
+.support-detail a {
+  color: #c2d2dc;
+  margin: 0;
+  padding: 0;
+  margin-right: 6px;
+  font-size: 16px;
+  text-decoration: none;
+}
+body .support-detail a:hover {
+  color: #ffffff;
+  text-decoration: underline;
+}
+/* footer */
+footer {
+  z-index: 10;
+  padding-top: 36px;
+  padding-bottom: 30px;
+  width: 100%;
+  overflow: hidden;
+  font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+  color: #ffffff;
+  background: #103a51;
+  font-size: 12px;
+}
+body footer > .container {
+  background: #103a51 !important;
+}
+footer .row {
+  background: #103a51;
+}
+footer a {
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 400;
+  color: #ffffff;
+  margin-right: 10px;
+  text-decoration: none;
+}
+footer a:hover {
+  text-decoration: underline;
+}
+
+footer a:link,footer a:visited,footer a:hover,footer a:active {
+  color: #ffffff;
+}
+footer .ts  {
+  vertical-align: top;
+  width: 33.33333333%;
+  float: left;
+  font-size: 12px;
+  height: 23px;
+  line-height: 19px;
+
+}
+footer .ts img {
+  height: 20px;
+  margin-left: 10px;
+
+}
+footer .sbt  {
+  vertical-align: middle;
+  text-transform: uppercase;
+  width: 66.66666667%;
+  float: left;
+}
+footer .sbt a {
+  font-size: 14px;
+  font-weight: 700;
+  vertical-align: middle;
+  height: 20px;
+  line-height: 20px;
+}
+footer .sbt a:hover {
+  color: #ffffff;
+}
+footer .sbt img {
+  height: 20px;
 }
