--- a/src/nanoc/layouts/landing.html
+++ b/src/nanoc/layouts/landing.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="<%= @items['/bootstrap-theme/'].path %>">
     <link rel="stylesheet" href="<%= @items['/stylesheet/'].path %>">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link rel='shortcut icon' href="<%= @items['/favicon/'].path %>" />
     <!-- you don't need to keep this, but it's cool for stats! -->
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
     
