--- a/src/nanoc/layouts/default.html
+++ b/src/nanoc/layouts/default.html
@@ -29,7 +29,7 @@
                 <div class="nav">
                   <a href="<%= @items['/documentation/'].path %>">Documentation</a>
                   <a href="<%= @items['/download/'].path %>">Download</a>
-                  <a href="<%= @items['/community/'].path %>">Community</a>
+                  <a href="<%= @items['/community/'].path %>">Get Involved</a>
                   <a id="source-code" href="https://github.com/sbt/sbt"><img src="<%= @items['/github-logo-teal/'].path %>" alt="Source code"></a>
                   <a id="twitter" href="https://twitter.com/scala_sbt"><img src="<%= @items['/twitter-logo-teal/'].path %>" alt="sbt on Twitter"></a>
                 </div>
@@ -70,7 +70,6 @@
               </div>
               <div class="support-detail">
                 <h2>Community Support</h2>
-                <a href="https://groups.google.com/forum/#!forum/sbt-dev">Mailing List</a>
                 <a href="https://stackoverflow.com/questions/tagged/sbt">StackOverflow</a>
               </div>
             </div>
@@ -101,7 +100,7 @@
               </a>
               <a href="<%= @items['/documentation/'].path %>">Documentation</a>
               <a href="<%= @items['/download/'].path %>">Download</a>
-              <a href="<%= @items['/community/'].path %>">Community</a>
+              <a href="<%= @items['/community/'].path %>">Get Involved</a>
             </nav>
           </div>
           <div class="col-md-4 text-right ts">
