change the icon back

--- a/src/nanoc/layouts/landing.html
+++ b/src/nanoc/layouts/landing.html
@@ -22,7 +22,7 @@
               <div class="col-md-3">
                 <div class="logo">
                   <a href="<%= @items['/'].path %>index.html">
-                    <img src="<%= @items['/typesafe_sbt_reverse-pride/'].path %>" alt="sbt">
+                    <img src="<%= @items['/typesafe_sbt_svg/'].path %>" alt="sbt">
                   </a>
                 </div>
               </div>
