google-site-verification

--- a/src/nanoc/layouts/landing.html
+++ b/src/nanoc/layouts/landing.html
@@ -11,7 +11,7 @@
     <link rel='shortcut icon' href="<%= @items['/favicon/'].path %>" />
     <!-- you don't need to keep this, but it's cool for stats! -->
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
-    
+    <meta name="google-site-verification" content="I28z-8Rg5JifsOR9NpTD9C9dFYutH_Dz8QWOHUDs6lg">
   </head>
   <body class="landing">
     <header>
