--- a/src/nanoc/layouts/landing.html
+++ b/src/nanoc/layouts/landing.html
@@ -67,13 +67,13 @@
             </div>
             <div class="support-item">
               <div class="support-icon">
-                <svg class="svg-icon svg-icon-typesafe" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 154 154" enable-background="new 0 0 154 154"><path fill="#fff" d="M49.7 114c-4.8 0-8.7-5.1-8.7-9.9v-.2c0-4.8 3.9-7.9 8.7-7.9h100c.9-3 1.6-7 2-11h-84c-4.8 0-8.7-3.7-8.7-8.5s3.9-8.5 8.7-8.5h83.7c-.5-4-1.2-8-2.3-11h-63.4c-4.8 0-8.7-3.7-8.7-8.5s3.9-8.5 8.7-8.5h56c-13.1-23-37.2-37.8-64.7-37.8-41.4 0-75 33.3-75 74.7s33.6 75.6 75 75.6c28.4 0 53.1-15.4 65.8-38.4h-93.1z"/></svg>
+                <svg id="lightbend-icon-reverse" class="svg-icon svg-icon-lightbend-reverse" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 302 262"><title>lightbend-icon</title><g id="icon"><path d="M1,195v56a10,10,0,0,0,10,10H291a10,10,0,0,0,10-10V195a557.85,557.85,0,0,1-150,20A557.85,557.85,0,0,1,1,195Z" style="fill:#fff"/><path d="M291,1H11A10,10,0,0,0,1,11V176a539.94,539.94,0,0,0,150,21,539.94,539.94,0,0,0,150-21V11A10,10,0,0,0,291,1Z" style="fill:#fff"/></g></svg>
               </div>
               <div class="support-detail">
                 <h2>Commercial Support</h2>
-                <a href="http://typesafe.com/subscription">Typesafe Subscription</a>
-                <a href="http://typesafe.com/subscription/training">Training</a>
-                <a href="http://typesafe.com/subscription/consulting">Consulting</a>
+                <a href="https://www.lightbend.com/services/expert-support">Lightbend Subscription</a>
+                <a href="https://www.lightbend.com/services/training">Training</a>
+                <a href="https://www.lightbend.com/services/consulting">Consulting</a>
               </div>
             </div>
           </div>
@@ -96,9 +96,9 @@
             </nav>
           </div>
           <div class="col-md-4 text-right ts">
-            &copy; 2015 Typesafe Inc.
-            <a href="https://typesafe.com">
-              <img src="<%= @items['/typesafe_reverse/'].path %>" alt="Typesafe, Inc.">
+            &copy; 2016 Lightbend Inc.
+            <a href="https://www.lightbend.com">
+              <img src="<%= @items['/lightbend_reverse/'].path %>" alt="Typesafe, Inc.">
             </a>
 
           </div>
