--- a/src/nanoc/layouts/default.html
+++ b/src/nanoc/layouts/default.html
@@ -104,7 +104,7 @@
             </nav>
           </div>
           <div class="col-md-4 text-right ts">
-            &copy; 2016 Lightbend Inc.
+            &copy; 2016-2017 Lightbend Inc.
             <a href="https://www.lightbend.com">
               <img src="<%= @items['/lightbend_reverse/'].path %>" alt="Typesafe, Inc.">
             </a>
