--- a/src/nanoc/content/stylesheet.css
+++ b/src/nanoc/content/stylesheet.css
@@ -45,10 +45,11 @@ header nav {
 header nav .logo {
   height: 100%;
   width: 100%;
+  padding-top: 10px;
+  padding-bottom: 8px;
 }
 header nav .logo img {
-  height: 40px;
-  margin-top: 16px;
+  height: 56px;
 }
 
 header .nav {
