--- a/src/reference/custom.css
+++ b/src/reference/custom.css
@@ -25,11 +25,12 @@ div.header {
 
 div.logo {
   display: inline-block;
+  padding-top: 10px;
+  padding-bottom: 8px;
 }
 
 div.logo img {
-  height: 40px;
-  margin-top: 16px;
+  height: 56px;
 }
 
 div.header div.container {
