--- a/src/nanoc/layouts/landing.html
+++ b/src/nanoc/layouts/landing.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>sbt - The interactive build tool</title>
+    <title>Lightbend sbt - The interactive build tool</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="<%= @items['/bootstrap_style/'].path %>">
     <link rel="stylesheet" href="<%= @items['/bootstrap-theme/'].path %>">
-    <link rel="stylesheet" href="<%= @items['/stylesheet/'].path %>">
+    <link rel="stylesheet" href="<%= @items['/stylesheet/'].path %>?v2017-09-22b">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link rel='shortcut icon' href="<%= @items['/favicon/'].path %>" />
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= @items['/favicon-32x32/'].path %>">
+    <link rel="icon" type="image/png" sizes="96x96" href="<%= @items['/favicon-96x96/'].path %>">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= @items['/favicon-16x16/'].path %>">
     <!-- you don't need to keep this, but it's cool for stats! -->
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
     <meta name="google-site-verification" content="I28z-8Rg5JifsOR9NpTD9C9dFYutH_Dz8QWOHUDs6lg">
@@ -22,7 +25,7 @@
               <div class="col-md-3">
                 <div class="logo">
                   <a href="<%= @items['/'].path %>index.html">
-                    <img src="<%= @items['/typesafe_sbt_svg/'].path %>" alt="sbt">
+                    <img src="<%= @items['/sbt-logo-100x56/'].path %>" alt="sbt">
                   </a>
                 </div>
               </div>
