--- a/src/nanoc/content/stylesheet.css
+++ b/src/nanoc/content/stylesheet.css
@@ -3,7 +3,8 @@
   min-width: 760px;
 }
 body {
-  background: #103a51;
+  background: #1a84ad; /* Lightbend azure */
+
   font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
   color: #103a51;
   font-size: 16px;
@@ -22,12 +23,13 @@ body header nav .row > div:last-child {
 }
 
 body header {
-  background: #103a51;
+  background: #1a84ad; /* Lightbend azure */
   padding: 5px 0 0 0;
   min-height: 85px;
 }
+
 body.landing header {
-  height: 300px;
+  height: 180px;
 }
 .wrench {
   width: 100%;
@@ -86,7 +88,7 @@ header .nav>a:hover {
 
 .page-title {
   color: #ffffff;
-  background-color: #103a51; /* light blue */
+  background-color: #1a84ad; /* Lightbend azure */
   width: 100%;
   padding: 20px 0;
 }
