make buttons orange

--- a/src/nanoc/content/stylesheet.css
+++ b/src/nanoc/content/stylesheet.css
@@ -189,9 +189,9 @@ a.btn,
   line-height: 1.4em;
   padding: 0.7em 1.5em;
   margin: 5px 0;
-  background-color: #F16665;
-  border-radius: 3px;
-  border-bottom: 2px solid #D64546;
+  background-color: #ff931e; /* Lightbend orange. */
+  border-radius: 1px;
+  border-bottom: 1px solid #ff931e; /* Lightbend orange. */
   color: white !important;
   text-transform: uppercase;
   font-size: 1em;
@@ -213,10 +213,10 @@ a.btn:active,
 
 a.btn:hover,
 .btn:hover {
-  background-color: #E25758;
+  background-color: #f48122; /* Lightbend dark orange. */
+  border-bottom: 1px solid #f48122; /* Lightbend orange. */
   transition: all 200ms ease-in-out;
 }
-
 
 .support-item {
   display: inline-block;
