--- a/src/nanoc/layouts/default.html
+++ b/src/nanoc/layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="<%= @items['/bootstrap_style/'].path %>">
     <link rel="stylesheet" href="<%= @items['/bootstrap-theme/'].path %>">
-    <link rel="stylesheet" href="<%= @items['/stylesheet/'].path %>?v2017-09-22b">
+    <link rel="stylesheet" href="<%= @items['/stylesheet/'].path %>?v2017-09-22c">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link rel='shortcut icon' href="<%= @items['/favicon/'].path %>" />
     <link rel="icon" type="image/png" sizes="32x32" href="<%= @items['/favicon-32x32/'].path %>">
