polygon-alter background

--- a/src/nanoc/layouts/landing.html
+++ b/src/nanoc/layouts/landing.html
@@ -40,6 +40,21 @@
           </div>
         </div>
       </nav>
+      <div class="header-content">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div id="main" class="text-center">
+                <h1>The interactive build tool</h1>
+                <span class="statement">
+                Use Scala to define your tasks. Then run them in parallel from the shell.
+                </span><br><br>
+                <a href="download.html" class="btn" role="button">Download</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
     <div class="fw-wrapper white">
       <div class="container content">
