--- a/src/nanoc/content/stylesheet.css
+++ b/src/nanoc/content/stylesheet.css
@@ -31,11 +31,35 @@ body header {
 body.landing header {
   height: 180px;
 }
+
+@media (min-width: 992px) {
+  body.landing header {
+    background: transparent url('polygon-alter.jpg') repeat-x center top;
+    height: 500px;
+  }
+
+  .header-content {
+    margin-top: 100px;
+    width: 100%;
+    color: #ffffff;
+  }
+}
+
+.header-content h1 {
+  color: #ffffff;
+}
+
+span.statement {
+  color: rgba(255, 255, 255, 0.9);
+  font-size: 2rem;
+}
+
 .wrench {
   width: 100%;
   height: 100%;
   background: transparent url('wrench-1000-center-navy.png') no-repeat center 135px;
 }
+
 header nav {
   height: 75px;
   background: #ffffff;
@@ -114,7 +138,6 @@ header .nav>a:hover {
 .text-right {
   text-align: right;
 }
-
 
 .fw-wrapper {
   width: 100%;
