--- a/src/nanoc/layouts/default.html
+++ b/src/nanoc/layouts/default.html
@@ -107,9 +107,9 @@
             </nav>
           </div>
           <div class="col-md-4 text-right ts">
-            &copy; 2016 Lightbend Inc.
+            &copy; 2016-2017 Lightbend Inc.
             <a href="https://www.lightbend.com">
-              <img src="<%= @items['/lightbend_reverse/'].path %>" alt="Typesafe, Inc.">
+              <img src="<%= @items['/lightbend_reverse/'].path %>" alt="Lightbend, Inc.">
             </a>
           </div>
         </div>
