Replace sbt & social icons with vector versions

--- a/src/nanoc/layouts/landing.html
+++ b/src/nanoc/layouts/landing.html
@@ -24,7 +24,7 @@
             <div class="col-md-3">
               <div class="logo">
                 <a href="<%= @items['/'].path %>index.html">
-                  <img src="<%= @items['/sbt-logo-100x56/'].path %>" alt="sbt">
+                  <img src="<%= @items['/sbt-logo/'].path %>" alt="sbt">
                 </a>
               </div>
             </div>
@@ -33,8 +33,8 @@
                 <a href="<%= @items['/documentation/'].path %>">Documentation</a>
                 <a href="<%= @items['/download/'].path %>">Download</a>
                 <a href="<%= @items['/community/'].path %>">Get Involved</a>
-                <a id="source-code" href="https://github.com/sbt/sbt"><img src="<%= @items['/github-logo-teal/'].path %>" alt="Source code"></a>
-                <a id="twitter" href="https://twitter.com/scala_sbt"><img src="<%= @items['/twitter-logo-teal/'].path %>" alt="sbt on Twitter"></a>
+                <a id="source-code" href="https://github.com/sbt/sbt"><img src="<%= @items['/github-logo-teal/'].path %>" alt="Source code" class="social"></a>
+                <a id="twitter" href="https://twitter.com/scala_sbt"><img src="<%= @items['/twitter-logo-teal/'].path %>" alt="sbt on Twitter" class="social"></a>
               </div>
             </div>
           </div>
@@ -104,7 +104,7 @@
           <div class="col-md-8 sbt">
             <nav>
               <a href="<%= @items['/'].path %>index.html">
-                <img src="<%= @items['/typesafe_sbt_reverse/'].path %>" alt="sbt">
+                <img src="<%= @items['/sbt-logo-reverse/'].path %>" alt="sbt">
               </a>
               <a href="<%= @items['/documentation/'].path %>">Documentation</a>
               <a href="<%= @items['/download/'].path %>">Download</a>
