Add outdated warning

--- a/src/reference/custom.css
+++ b/src/reference/custom.css
@@ -199,10 +199,34 @@ body .support-strip .row{
   font-size: 16px;
   text-decoration: none;
 }
+
 body .support-detail a:hover {
   color: #ffffff;
   text-decoration: underline;
 }
+
+/* warning */
+
+div#floaty-warning {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  z-index: 1000;
+  text-align: center;
+}
+
+div.warning {
+  background-color: #e25758; /* red */
+  color: white;
+  padding: 14px;
+}
+
+div.warning a {
+  color: white;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
 /* footer */
 footer {
   z-index: 10;
