Add a "Support" tab
Inspired by https://www.lagomframework.com/support.html

--- a/src/nanoc/layouts/default.html
+++ b/src/nanoc/layouts/default.html
@@ -32,6 +32,7 @@
                 <div class="nav">
                   <a href="<%= @items['/documentation/'].path %>">Documentation</a>
                   <a href="<%= @items['/download/'].path %>">Download</a>
+                  <a href="<%= @items['/support/'].path %>">Support</a>
                   <a href="<%= @items['/community/'].path %>">Get Involved</a>
                   <a id="source-code" href="https://github.com/sbt/sbt"><img src="<%= @items['/github-logo-teal/'].path %>" alt="Source code" class="social"></a>
                   <a id="twitter" href="https://twitter.com/scala_sbt"><img src="<%= @items['/twitter-logo-teal/'].path %>" alt="sbt on Twitter" class="social"></a>
