--- a/src/nanoc/layouts/error.html
+++ b/src/nanoc/layouts/error.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="<%= @items['/bootstrap_style/'].path %>">
     <link rel="stylesheet" href="<%= @items['/bootstrap-theme/'].path %>">
-    <link rel="stylesheet" href="<%= @items['/stylesheet/'].path %>?v2017-09-22c">
+    <link rel="stylesheet" href="<%= @items['/stylesheet/'].path %>?v2018-03-07">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link rel='shortcut icon' href="<%= @items['/favicon/'].path %>" />
     <link rel="icon" type="image/png" sizes="32x32" href="<%= @items['/favicon-32x32/'].path %>">
@@ -29,7 +29,7 @@
                 </div>
               </div>
               <div class="col-md-9">
-                <div class="nav">
+                <div class="nav" id="topbar">
                   <a href="<%= @items['/documentation/'].path %>">Documentation</a>
                   <a href="<%= @items['/download/'].path %>">Download</a>
                   <a href="<%= @items['/support/'].path %>">Support</a>
