Adds cookie banner to site
Prevents GA from loading if user opts out. Adds standard legal footer.

--- a/src/nanoc/layouts/landing.html
+++ b/src/nanoc/layouts/landing.html
@@ -15,6 +15,16 @@
     <!-- you don't need to keep this, but it's cool for stats! -->
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
     <meta name="google-site-verification" content="I28z-8Rg5JifsOR9NpTD9C9dFYutH_Dz8QWOHUDs6lg">
+
+    <!-- OneTrust Cookies Consent Notice (Production Standard, scala-sbt.org, en-GB) start -->
+    <script src="https://optanon.blob.core.windows.net/consent/d759c5db-6821-46e0-a988-6bc699efb74e.js" type="text/javascript" charset="UTF-8"></script>
+    <script type="text/javascript">
+      function OptanonWrapper() { 
+        //callback when OneTrust is loaded and ready
+      }
+    </script>
+    <!-- OneTrust Cookies Consent Notice (Production Standard, scala-sbt.org, en-GB) end -->
+    
   </head>
   <body class="landing">
     <header>
@@ -111,9 +121,16 @@
               <a href="<%= @items['/download/'].path %>">Download</a>
               <a href="<%= @items['/community/'].path %>">Get Involved</a>
             </nav>
+            <p class="legal">
+              &copy; 2016-2018 Lightbend, Inc. |
+              <a href="https://www.lightbend.com/legal/licenses" target="_blank">Licenses</a> | 
+              <a href="https://www.lightbend.com/legal/terms" target="_blank">Terms</a> | 
+              <a href="https://www.lightbend.com/legal/privacy" target="_blank">Privacy Policy</a> | 
+              <a href="<%= @items['/cookie/'].path %>">Cookie Listing</a> | 
+              <a class="optanon-toggle-display">Cookie Settings</a>
+            </p>
           </div>
           <div class="col-md-4 text-right ts">
-            &copy; 2016-2017 Lightbend Inc.
             <a href="https://www.lightbend.com">
               <img src="<%= @items['/lightbend_reverse/'].path %>" alt="Lightbend, Inc.">
             </a>
@@ -125,7 +142,7 @@
     <!-- Placed at the end -->
     <script src="<%= @items['/jquery/'].path %>" type="text/javascript"></script>
     <script src="<%= @items['/bootstrap/'].path %>" type="text/javascript"></script>
-    <script type="text/javascript" async>
+    <script type="text/plain" class="optanon-category-2" async>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -133,7 +150,7 @@
     ga('create', 'UA-41449189-1', 'scala-sbt.org');
     ga('send', 'pageview');
     </script>
-    <script type="text/javascript" async>
+    <script type="text/plain" class="optanon-category-2" async>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
