adjust left toc style

--- a/src/reference/custom.css
+++ b/src/reference/custom.css
@@ -2,6 +2,12 @@ p {
   width: inherit;
 }
 
+div.toccolumn {
+  overflow-y: inherit;
+  border-right: solid 1px lightgray;
+  font-size: 0.85em;
+}
+
 div.header {
   font-size: 18px;
   color: #ffffff;
