--- a/src/nanoc/layouts/landing.html
+++ b/src/nanoc/layouts/landing.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="<%= @items['/bootstrap_style/'].path %>">
     <link rel="stylesheet" href="<%= @items['/bootstrap-theme/'].path %>">
-    <link rel="stylesheet" href="<%= @items['/stylesheet/'].path %>?v2018-03-07">
+    <link rel="stylesheet" href="<%= @items['/stylesheet/'].path %>?v2019-10-15">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link rel='shortcut icon' href="<%= @items['/favicon/'].path %>" />
     <link rel="icon" type="image/png" sizes="32x32" href="<%= @items['/favicon-32x32/'].path %>">
@@ -40,7 +40,7 @@
             </div>
             <div class="col-md-9">
               <div class="nav" id="topbar">
-                <a href="<%= @items['/documentation/'].path %>">Documentation</a>
+                <a href="<%= @items['/learn/'].path %>">Learn</a>
                 <a href="<%= @items['/download/'].path %>">Download</a>
                 <a href="<%= @items['/support/'].path %>">Support</a>
                 <a href="<%= @items['/community/'].path %>">Get Involved</a>
@@ -60,7 +60,9 @@
                 <span class="statement">
                 Define your tasks in Scala. Run them in parallel from sbt's interactive shell.
                 </span><br><br>
-                <a href="download.html" class="btn" role="button">Download</a>
+                <a href="download.html" class="btn" role="button" style="margin-right: 2em">Download</a>
+
+                <a href="/1.x/docs/" class="btn" role="button" style="margin-left: 2em">Documentation</a>
               </div>
             </div>
           </div>
@@ -117,7 +119,7 @@
               <a href="<%= @items['/'].path %>index.html">
                 <img src="<%= @items['/sbt-logo-reverse/'].path %>" alt="sbt">
               </a>
-              <a href="<%= @items['/documentation/'].path %>">Documentation</a>
+              <a href="<%= @items['/learn/'].path %>">Learn</a>
               <a href="<%= @items['/download/'].path %>">Download</a>
               <a href="<%= @items['/community/'].path %>">Get Involved</a>
             </nav>
