--- a/src/reference/custom-202402.css
+++ b/src/reference/custom-202402.css
@@ -8,6 +8,12 @@ html {
 
 pre {
   border: solid 1px lightgray;
+  line-height: 1.8rem;
+  font-weight: 500;
+}
+
+code {
+  font-family: 'Inconsolata', monospace !important;
 }
 
 h1 {
