Adjust the weight and theme

--- a/src/reference/custom-202402.css
+++ b/src/reference/custom-202402.css
@@ -16,6 +16,14 @@ code {
   font-family: 'Inconsolata', monospace !important;
 }
 
+p code {
+  font-weight: 600;
+}
+
+li code {
+  font-weight: 600;
+}
+
 h1 {
   font-family: 'Linux Biolinum';
 }
